--- a/paper/joaquin-dr17.tex
+++ b/paper/joaquin-dr17.tex
@@ -93,13 +93,13 @@ than RR Lyrae.
 \clearpage
 \section{Introduction}\label{sec:intro}
 
-Enormous spectroscopic projects such as \SDSSV{} (CITE)
+Enormous spectroscopic projects such as \SDSSV{} (\citealt{sdssv})
 and ??? (CITE)
 are in the process of delivering spectra of millions of stars.
 These spectra provide radial velocities, stellar parameters, and element-abundance
 measurements.
 If we want to map the Milky Way, we need also \emph{distances} to these stars.
-We might rely on the ESA \Gaia{} Mission (CITE) to deliver distances, as it measures
+We might rely on the ESA \Gaia{} Mission (\citealt{gaia}) to deliver distances, as it measures
 geometric parallaxes for more than a billion sources.
 These measurements, being purely geometric in origin, are extremely reliable
 and are inferred with very few fundamental assumptions.
@@ -114,7 +114,7 @@ this stellar evolution, although with some systematic offsets and distortions.
 It is possible to use physical models and stellar spectroscopic observations
 jointly to infer stellar distances with good precision---but perhaps limited
 accuracy---this is part of the plans of many contemporary projects, including even
-the spectroscopic parts of the \Gaia{} Mission (CITE).
+the spectroscopic parts of the \Gaia{} Mission (CITECU8maybe).
 The accuracy of such theory-driven spectroscopic distances is limited by the
 wrongnesses and approximations of the physical models, and their use involves
 commitments to a baroque set of physical assumptions.
