--- a/notebooks/2-Neighborhoods-PCA.ipynb
+++ b/notebooks/2-Neighborhoods-PCA.ipynb
@@ -54,8 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "parent = JoaquinData.read(conf.parent_sample_cache_file)\n",
-    "parent = parent[np.all(np.isfinite(parent.X), axis=1)]"
+    "parent = JoaquinData.read(conf.parent_sample_cache_file)"
    ]
   },
   {
@@ -159,6 +158,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Full parent sample, for later:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp = parent.mask_spec_pixels(global_spec_mask)\n",
+    "parent_X = tmp.get_neighborhood_X(conf.neighborhood_color_names)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -179,6 +195,15 @@
    "metadata": {},
    "source": [
     "Run PCA on the neighborhood node features and project the subset feature matrix onto the PCA basis:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conf.neighborhood_pca_components = 9"
    ]
   },
   {
@@ -228,8 +253,8 @@
     "fig, axes = plt.subplots(pca.n_components_ // 2, 2,\n",
     "                         figsize=(16, 12), sharex=True)\n",
     "\n",
-    "for i in range(pca.n_components):\n",
-    "    axes.flat[i].plot(pca.components_[i])\n",
+    "for i, ax in enumerate(axes.flat):\n",
+    "    ax.plot(pca.components_[i])\n",
     "    \n",
     "fig.tight_layout()"
    ]
@@ -240,7 +265,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.cumsum(pca.explained_variance_ratio_)"
+    "print(np.cumsum(pca.explained_variance_ratio_)[-1])\n",
+    "plt.plot(np.cumsum(pca.explained_variance_ratio_))\n",
+    "plt.ylim(0, 1)\n",
+    "plt.axhline(0.9, zorder=-10, alpha=0.5, color='tab:blue')"
    ]
   },
   {
@@ -324,15 +352,7 @@
    "source": [
     "bw = np.mean(np.std(node_projected_X, axis=0)) * np.sqrt(node_projected_X.shape[1]) / 3\n",
     "kde = KernelDensity(bandwidth=bw, kernel='epanechnikov')\n",
-    "_ = kde.fit(node_projected_X)\n",
-    "dens = kde.score_samples(node_projected_X)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now construct the kdtree to find neighbors:"
+    "_ = kde.fit(node_projected_X)"
    ]
   },
   {
@@ -341,53 +361,82 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tree = cKDTree(node_projected_X)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Setting k=2 below means that each row in `idxs` will be (self, neighbor)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_, idxs = tree.query(node_projected_X, k=2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "TODO: change this so that we skip a star if it appears in a block!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sort_idx = dens.argsort()[::-1]\n",
+    "parent_projected_X = np.zeros((parent_X.shape[0], node_projected_X.shape[1]),\n",
+    "                               dtype=np.float32)\n",
     "\n",
-    "this_size = int(conf.max_neighborhood_size * len(neighborhood_node_stars) / len(parent))\n",
+    "vals = np.linspace(0, parent_X.shape[0], 32).astype(int)\n",
+    "for i1, i2 in zip(vals[:-1], vals[1:]):\n",
+    "    if i2 >= parent_X.shape[0]-1:\n",
+    "        i2 = parent_X.shape[0]\n",
+    "        \n",
+    "    parent_projected_X[i1:i2] = pca.transform(parent_X[i1:i2])\n",
+    "    parent_projected_X[i1:i2] /= pca.singular_values_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove sources that we don't want to appear in the train/test neighborhoods:\n",
+    "# TODO: these should probably be configurable...\n",
+    "training_mask = np.argwhere(\n",
+    "    (parent.stars['parallax_error'] < 0.1) &\n",
+    "    (parent.stars['N_COMPONENTS'] == 1) &\n",
+    "    (parent.stars['ruwe'] < 1.2) &  # MAGIC NUMBER\n",
+    "    (parent.stars['SNR'] > 40)\n",
+    ").ravel()\n",
+    "\n",
+    "# In the training sample, we want to make sure we only \n",
+    "# use each star once - right?!\n",
+    "_, unique_idx = np.unique(parent.stars['APOGEE_ID'], return_index=True)\n",
+    "training_sample_idx = training_mask[np.in1d(training_mask, unique_idx)]\n",
+    "\n",
+    "len(training_sample_idx), len(parent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_projected_X = parent_projected_X[training_sample_idx]\n",
+    "training_dens = kde.score_samples(training_projected_X)\n",
+    "assert training_projected_X.shape[0] == training_dens.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "min_neighborhood_size = 4096\n",
+    "\n",
+    "sort_idx = training_dens.argsort()[::-1]\n",
+    "tree = cKDTree(training_projected_X)\n",
     "\n",
     "neighborhoods = []\n",
-    "blocks = []\n",
-    "for (i1, i2) in idxs[sort_idx]:\n",
-    "    # This relaxes the uniqueness requirement: we only skip now if a \n",
-    "    # star appears in a block\n",
-    "    if (np.ravel(blocks) == i1).sum() >= 2:\n",
+    "all_block_stars = np.array([], dtype=int)\n",
+    "for i in tqdm(sort_idx):\n",
+    "    # Skip if a star already appears in a block\n",
+    "    stoop_idx = training_sample_idx[i]\n",
+    "    if stoop_idx in all_block_stars:\n",
     "        continue\n",
     "    \n",
-    "    _, results = tree.query(node_projected_X[i1], k=this_size)\n",
-    "    neighborhoods.append(np.concatenate(([i1], results)))\n",
-    "    blocks.append(np.concatenate(([i1], results[:conf.block_size])))\n",
+    "    _, results = tree.query(training_projected_X[i], \n",
+    "                            k=conf.max_neighborhood_size)\n",
+    "    \n",
+    "    neighborhood_idx = training_sample_idx[results]\n",
+    "    assert neighborhood_idx == stoop_idx\n",
+    "    neighborhoods.append(neighborhood_idx)\n",
+    "    \n",
+    "    # TODO: block or min. neighborhood here?!\n",
+    "    # all_block_stars = np.concatenate((all_block_stars, [i], results[:conf.block_size]))\n",
+    "    all_block_stars = np.concatenate((all_block_stars, \n",
+    "                                      neighborhood_idx[:min_neighborhood_size]))\n",
     "\n",
     "len(neighborhoods)"
    ]
@@ -398,21 +447,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "node_TEFF = [neighborhood_node_stars['TEFF'][idx[0]]\n",
-    "             for idx in neighborhoods]\n",
-    "node_LOGG = [neighborhood_node_stars['LOGG'][idx[0]]\n",
-    "             for idx in neighborhoods]\n",
-    "\n",
+    "stoop_idx = np.array([idx[0] for idx in neighborhoods])\n",
+    "stoop_projected_X = parent_projected_X[stoop_idx]\n",
+    "stoop_stars = parent.stars[stoop_idx]\n",
+    "assert len(stoop_stars['APOGEE_ID']) == np.unique(stoop_stars['APOGEE_ID']).size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "fig, ax = plt.subplots(figsize=(6, 6))\n",
     "\n",
-    "ax.scatter(node_TEFF, node_LOGG)\n",
+    "ax.scatter(stoop_stars['TEFF'], stoop_stars['LOGG'])\n",
     "\n",
     "ax.set_xlim(teff_logg_bins[0].max(), \n",
     "            teff_logg_bins[0].min())\n",
     "ax.set_ylim(teff_logg_bins[1].max(), \n",
     "            teff_logg_bins[1].min())\n",
     "\n",
-    "ax.set_title('neighborhood nodes')\n",
+    "ax.set_title('stoops')\n",
     "\n",
     "ax.set_xlabel('TEFF')\n",
     "ax.set_ylabel('LOGG')\n",
@@ -437,56 +493,72 @@
     "neighbor_plot_path.mkdir(exist_ok=True)\n",
     "\n",
     "for name in tqdm(neighbor_plot_path.rglob('*.png')):\n",
-    "    name.unlink()\n",
+    "    if name.exists():\n",
+    "        name.unlink()\n",
     "\n",
     "for n, hood in enumerate(tqdm(neighborhoods)):\n",
-    "    fig = plot_hr_cmd(parent.stars, neighborhood_node_stars,\n",
+    "    fig = plot_hr_cmd(parent.stars, parent.stars,\n",
     "                      idx0=hood[0], other_idx=hood[1:])\n",
-    "    fig.tight_layout()\n",
-    "    fig.savefig(neighbor_plot_path / f'neighborhood-{conf.max_neighborhood_size}-{n:03d}.png', dpi=200)\n",
-    "    plt.close(fig)"
+    "    break\n",
+    "#     fig.tight_layout()\n",
+    "#     fig.savefig(neighbor_plot_path / f'neighborhood-{n:03d}.png', dpi=200)\n",
+    "#     plt.close(fig)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Apply to the full parent sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tmp = parent.mask_spec_pixels(global_spec_mask)\n",
-    "parent_X = tmp.get_neighborhood_X(conf.neighborhood_color_names)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "parent_projected_X = np.zeros((parent_X.shape[0], node_projected_X.shape[1]),\n",
-    "                               dtype=np.float32)\n",
+    "### Apply to the full parent sample\n",
     "\n",
-    "vals = np.linspace(0, parent_X.shape[0], 32).astype(int)\n",
-    "for i1, i2 in zip(vals[:-1], vals[1:]):\n",
-    "    if i2 >= parent_X.shape[0]-1:\n",
-    "        i2 = parent_X.shape[0]\n",
-    "        \n",
-    "    parent_projected_X[i1:i2] = pca.transform(parent_X[i1:i2])\n",
-    "    parent_projected_X[i1:i2] /= pca.singular_values_\n",
+    "Every parent sample star should get a stoop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# parent_tree = cKDTree(parent_projected_X)\n",
+    "stoop_tree = cKDTree(stoop_projected_X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# _, closest_stoop_idx = parent_tree.query(stoop_projected_X, k=2)\n",
+    "closest_stoop_dist, closest_stoop_idx = stoop_tree.query(parent_projected_X, k=1)\n",
+    "closest_stoop_idx = closest_stoop_idx.ravel()\n",
+    "closest_stoop_dist = closest_stoop_dist.ravel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(stoop_projected_X), np.unique(closest_stoop_idx).size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_indices = []\n",
+    "for n in range(len(neighborhoods)):\n",
+    "    all_indices.append(neighborhoods[n][:conf.block_size])\n",
+    "tmp = np.unique(np.ravel(all_indices)).shape[0] / training_projected_X.shape[0]\n",
+    "print(f\"{tmp*100:.1f}% of training stars end up in a block\")\n",
     "\n",
-    "# Remove sources that we don't want to appear in the train/test neighborhoods:\n",
-    "# TODO: this should probably *also* be a configurable thing...\n",
-    "parent_projected_X[\n",
-    "    (parent.stars['N_COMPONENTS'] != 1) |\n",
-    "    (parent.stars['ruwe'] > 1.4) |  # MAGIC NUMBER\n",
-    "    (parent.stars['SNR'] < 80)] = np.inf"
+    "tmp = np.unique(np.ravel(all_indices)).shape[0] / parent_projected_X.shape[0]\n",
+    "print(f\"{tmp*100:.1f}% of parent stars end up in a block\")"
    ]
   },
   {
@@ -495,49 +567,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "parent_tree = cKDTree(parent_projected_X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "zone_idx = []\n",
-    "for i, nidx in enumerate(tqdm(neighborhoods)):\n",
-    "    dist, idx = parent_tree.query(node_projected_X[nidx[0]],\n",
-    "                                  k=conf.max_neighborhood_size)\n",
-    "    zone_idx.append(idx[dist.argsort()])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for n in trange(len(zone_idx)):\n",
-    "#     fig = plot_hr_cmd(parent_data.stars, parent_data.stars,\n",
-    "#                       idx0=zone_idx[n][0], other_idx=zone_idx[n][1:])\n",
-    "    \n",
-    "#     fig.tight_layout()\n",
-    "#     fig.savefig(neighbor_plot_path / f'parent-neighborhood-{neighborhood_size}-{n:03d}.png', dpi=200)\n",
-    "#     plt.close(fig)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for size in 2**np.arange(13, 15+1):\n",
+    "for size in 2 ** np.arange(12, 14+1):\n",
     "    all_indices = []\n",
-    "    for n in range(len(zone_idx)):\n",
-    "        all_indices.append(zone_idx[n][:size])\n",
-    "    tmp = np.unique(np.ravel(all_indices)).shape[0] / parent_projected_X.shape[0]\n",
-    "    print(f\"{tmp*100:.1f}% of stars end up in a neighborhood of size {size}\")"
+    "    for n in range(len(neighborhoods)):\n",
+    "        all_indices.append(neighborhoods[n][:size])\n",
+    "    tmp = np.unique(np.ravel(all_indices)).shape[0] / training_projected_X.shape[0]\n",
+    "    print(f\"{tmp*100:.1f}% of training stars end up in a neighborhood of size {size}\")"
    ]
   },
   {
@@ -555,8 +590,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = conf.output_path / f'good_parent_neighborhood_indices.npy'\n",
-    "np.save(filename, np.array(all_indices))"
+    "np.save(conf.neighborhood_index_file, \n",
+    "        np.array(neighborhoods))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.savez(conf.parent_closest_stoop_file, \n",
+    "         idx=closest_stoop_idx, dist=closest_stoop_dist)"
    ]
   },
   {
@@ -583,7 +628,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.13"
   },
   "toc": {
    "base_numbering": 1,
